message test
{
	message element
	{
		optional int32 int8_min  = 1;
		optional int32 int8_max  = 2;
		optional int32 uint8_min = 3;
		optional int32 uint8_max = 4;

		optional int32 int16_min  = 5;
		optional int32 int16_max  = 6;
		optional int32 uint16_min = 7;
		optional int32 uint16_max = 8;

		optional int32 int32_min  =  9;
		optional int32 int32_max  = 10;
		optional uint32 uint32_min = 11;
		optional uint32 uint32_max = 12;

		optional int64 int64_min  = 13;
		optional int64 int64_max  = 14;
		optional uint64 uint64_min = 15;
		optional uint64 uint64_max = 16;

		optional double double_min = 17;
		optional double double_max = 18;

		optional string str = 19;
	}

	repeated element el = 1;
}